<resources>
    <string name="app_name">CartAppAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_cart">ShowCart</string>
    <string name="title_activity_check_out">CheckOut</string>
    <string name="tab2FNameHint">Enter User Id</string>
    <string name="tab2LNameHint">Enter Your Password</string>
    <string name="title_activity_register">Register</string>
    <string name="fNameHint">Enter Full Name</string>
    <string name="emailHint">Confirmation will be sent to this Number</string>
    <string name="RadioButtonM">Male</string>
    <string name="RadioButtonF">Female</string>
    <string name="RadioButtonO">Other</string>
    <string name="pwdHint">Enter Password</string>
    <string name="uNameHint">Select User Id</string>
    <string name="title_activity_confirmation">Confirmation</string>
</resources>
