<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Register">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Full Name : "/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:hint="@string/fNameHint"
                    android:inputType="textPersonName"
                    android:id="@+id/fname"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone Number : "/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:hint="@string/emailHint"
                    android:inputType="number"
                    android:id="@+id/pno"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User Id : "/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:hint="@string/uNameHint"
                    android:inputType="textPersonName"
                    android:id="@+id/uname"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password : "/>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:hint="@string/pwdHint"
                    android:inputType="textPassword"
                    android:id="@+id/pwd"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:text="Select your Gender : "/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/gender">
                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/RadioButtonM"
                            android:id="@+id/genderM"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/RadioButtonF"
                            android:id="@+id/genderF"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/RadioButtonO"
                            android:id="@+id/gendero"/>
                    </RadioGroup>
                </LinearLayout>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addImage"
                    android:onClick="addImage"
                    android:text="Add Profile Pic"/>
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/imageView"
                    android:background="#c4b7b7"
                    android:layout_gravity="center" />
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:hint="Please Upload Photo"
                    android:clickable="false"
                    android:onClick="register"
                    android:id="@+id/submitregister"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
